tests/error/poly_errors/arg_mismatch5.err
Guppy compilation failed. Error in file $FILE:9

7:    @guppy(module)
8:    def main(x: "list[42]") -> None:
                   ^^^^^^^^
GuppyTypeError: Expected a type, got value of type nat
